# ai-engineering-fundamentals

./: .gitignore  LICENCE  README.md  RUNBOOK.md  pyproject.toml
docs/: tentative_curriculum.md  use_case.md
exercises/01_foundations/01_basic_llm_api_calls/: README.md  call_anthropic.py  call_anthropic_walkthrough.py  call_openai.py  call_openai_walkthrough.py
exercises/01_foundations/02_system_user_prompts/: README.md  call_anthropic.py  call_anthropic_walkthrough.py  call_openai.py  call_openai_walkthrough.py
